2008-10-04  Alper KANAT  <alperkanat@gmail.com>

	* blog/templatetags/blog_filters.py, templates/blog/sidebar.html,
	templates/blog/twitter.html: fixed a bug that comes up when there's no
	credentials for twitter in settings.py..
	* media/images/twitter_bg.png, media/images/twitter_sidebar.png,
	templates/blog/twitter.html, blog/templatetags/blog_filters.py,
	media/css/style.css, settings-example.py, templates/blog/sidebar.html: added
	twitter support..
	* contrib/, REQUIREMENTS, extra/messages.py, users/views.py: moved all
	external dependencies that comes with raptiye to the contrib folder.. also
	refactored the necessary parts due to that change..

2008-10-03  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/contact.html: added link for my gpg public key..
	* all templates: extend tag must be the first tag in the template and
	therefore i've switched places with the gpl disclaimer and extend tag..
	* LICENSE and all files: raptiye is now licensed with GPLv3..
	* media/images/ff_horizontal.png, media/js/ff.js, media/css/style.css,
	templates/frontpage/base.html, templates/users/profile.html: added a new js
	module for firefox advertisement.. ibox and jquery dependencies are
	mandatory but I can drop them due to some user requests.. (ibox would be
	really hard..) ibox dependency is moved to the whole parts of the site since
	the ad shows up in every page..

2008-10-01  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/detail.html: forgot this part of the page..
	* media/js/tiny_mce/textarea.js: fixed bug about tinymce converting urls to
	relative..
	* blog/feeds.py, blog/urls.py, blog/views.py, extra/tag_cloud.py,
	tags/admin.py, tags/models.py, templates/blog/homepage.html,
	templates/blog/tags.html: tags are slugified (urlized) now.. this will solve
	the rss related problems for tags and more.. there are also some changes in
	the db scheme for tags table..

2008-09-30  Alper KANAT  <alperkanat@gmail.com>
