@@ -26,5 +26,15 @@ class CommentsAdmin(admin.ModelAdmin):
 	list_per_page = settings.ADMIN_LIST_PER_PAGE
 	ordering = ("-datetime",)
 	search_fields = ("entry__title", "author__username", "content")
+	
+	def save_model(self, request, obj, form, change):
+		# if the comment is allowed to be published, then we need
+		# to notify the other users that want to be notified for a 
+		# particular blog post..
+		obj.save()
+		
+		if obj.published:
+			from raptiye.extra.mail import send_comment_notification
+			send_comment_notification(obj.entry, obj.author)
 
 admin.site.register(Comments, CommentsAdmin)
